# A.RobotAI-ros2-streamer

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
ros_stream_viewer/: viewer.py
ros_stream_viewer/services/: __init__.py  obj_class.py  predict_service.py  stream_service.py  viewer_service.py
ros_stream_viewer/utils/: logger.py  thread_helpper.py
src/ros_stream_server/: Dockerfile  package.xml  ros_entrypoint.sh  setup.cfg  setup.py
src/ros_stream_server/kube/: ros-streamer-deployment.yaml
src/ros_stream_server/launch/: stream_server.launch.py
src/ros_stream_server/ros_stream_server/: stream_server.py
src/ros_stream_server/ros_stream_server/services/: stream_predict_service.py
viewer/: viewer.py
